# pdf_metadata_editor

./: .gitignore  README.md  setup.cfg
src/pdf_metadata_editor/: __init__.py  __main__.py  fitzcli.py  metadata.py  metadata.ui
