[metadata]
name = PdfMetadataEditor
version = 0.0.1
author = Roger Bissonnette
author_email = rpbissonnette@gmail.com
description="Semi friendly tool for editing PDF metadata",
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.6

[options.packages.find]
where=src